[package]
name = "some-multiplayer-game"
version = "0.2.0"
edition = "2018"

[lib]
name="sample_lib"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
hostess = {git = "https://github.com/horup/hostess-rs.git", branch = "v0.2.0"}
env_logger = "0.8.4"
web-sys = {version = "0.3.55", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
  'Location',
  'Performance',
  'Storage'
]}

glam = {version = "0.19.0", features = ["serde"] }
generational-arena = { version = "0.2", features = ["serde"] }
wasm-logger = "0.2.0"
bincode = {version = "1.3.3"}
rand = "0.8.4"
serde = {version = "1.0.130", features = ["derive"]} 
parry2d = "0.7.1"